# sugar

./: .gitignore  .readthedocs.yaml  CHANGELOG  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: logo.yml  tests.yml
assets/: create_sugar_logo.py  sugar_tutorial.ipynb
docs/: build_docs.sh  conf.py  index.rst  requirements.txt
docs/_templates/: mynavigation.html
docs/_templates/sidebar/: brand.html  navigation.html
docs/joss/: paper.bib  paper.md
docs/src/: api.rst  dev_doc.rst  dev_plugin.rst  index.rst  sugar._io.blast.rst  sugar._io.clustal.rst  sugar._io.embl.rst  sugar._io.fasta.rst  sugar._io.genbank.rst  sugar._io.gff.rst  sugar._io.main.rst  sugar._io.meme.rst  sugar._io.rst  sugar._io.sjson.rst  sugar._io.stockholm.rst  sugar._io.tab.blast.rst  sugar._io.tab.core.rst  sugar._io.tab.infernal.rst  sugar._io.tab.mmseqs.rst  sugar._io.tab.tsv.rst  sugar._io.tab.xsv.rst  sugar._io.util.rst  sugar.core._adapter.rst  sugar.core.cane.rst  sugar.core.fts.rst  sugar.core.meta.rst  sugar.core.rst  sugar.core.seq.rst  sugar.data.rst  sugar.imaging.rst  sugar.index.fastaindex.rst  sugar.index.rst  sugar.web._entrez.rst  sugar.web.rst  tutorial_fts.rst  tutorial_imaging.rst  tutorial_install.rst  tutorial_misc.rst  tutorial_seqs.rst
src/sugar/: __init__.py  scripts.py
src/sugar/_io/: clustal.py  embl.py  fasta.py  genbank.py  gff.py  main.py  meme.py  sjson.py  stockholm.py  util.py
src/sugar/_io/tab/: core.py  mmseqs.py  xsv.py
src/sugar/core/: __init__.py  _adapter.py  cane.py  fts.py  meta.py  seq.py  util.py
src/sugar/data/: __init__.py
src/sugar/data/data_gcode/: convert.py  gc.prt
src/sugar/data/data_tutorial/: AF086833.gb  AF086833.gff  README  hits.blastn  pesti.stk
src/sugar/imaging/: __init__.py  _logo.py  alignment.py  colors.py  ftsviewer.py
src/sugar/imaging/color_schemes/: README
src/sugar/index/: fastaindex.py
src/sugar/tests/: conftest.py  pytest.ini  test_core_adapter.py  test_core_cane.py  test_core_fts.py  test_core_seq.py  test_core_util.py  test_imaging_alignment.py  test_imaging_fts.py  test_index_fastaindex.py  test_io.py  test_io_binary_plugin.py  test_io_clustal.py  test_io_embl.py  test_io_fts.py  test_io_genbank.py  test_io_gff.py  test_io_meme.py  test_io_sjson.py  test_io_stockholm.py  test_io_tab_blast.py  test_io_tab_infernal.py  test_io_tab_mmseqs.py  test_io_tab_xsv.py  test_io_template_plugin.py  test_scripts.py  test_web.py  util.py
src/sugar/tests/data/: README  example.clustal  example.gff  example.stk  example_ena.embl  example_uniprot.embl  fts_example.blastn  fts_example.gff  fts_example.gtf  fts_example.infernal  fts_example.mmseqs2  fts_example_blast_mmseqs2_fmtmode4_all.txt  fts_example_gff_version1.gff  fts_example_gff_version2.gff  fts_example_meme.txt  fts_example_tab_infernal_cmscan_fmt2.txt  fts_example_tab_infernal_cmscan_fmt3.txt  fts_example_tab_infernal_cmsearch_fmt3.txt  io_binary_plugin_fake_fts.bintest  io_blast_mmseqs2_fmtmode0_all.txt  io_blast_outfmt10.blastn  io_blast_outfmt10_all.blastn  io_gff_parsing_error.gff
src/sugar/web/: __init__.py  _entrez.py
sugar/: __init__.py  conftest.py  pytest.ini  scripts.py
sugar/_io/: __init__.py  _genbank_loc.py  blast.py  fasta.py  fastaindex.py  genbank.py  gff.py  main.py  sjson.py  stockholm.py  util.py
sugar/_io/tab/: __init__.py  blast.py  infernal.py  mmseqs.py  tsv.py  xsv.py
sugar/core/: cane.py  fts.py  meta.py  seq.py  translate.py  util.py
sugar/data/: __init__.py
sugar/data/data_gcode/: gc.json
sugar/data/data_submat/: README
sugar/index/: __init__.py  fastaindex.py
sugar/io/: __init__.py  blast.py  fasta.py  fastaindex.py  genbank.py  gff.py  main.py  sjson.py  stockholm.py  util.py
sugar/tests/: conftest.py  test_core_cane.py  test_core_fts.py  test_core_seq.py  test_core_translate.py  test_data.py  test_docs.py  test_index_fastaindex.py  test_io.py  test_io_binary_plugin.py  test_io_blast.py  test_io_fasta.py  test_io_fastaindex.py  test_io_fts.py  test_io_genbank.py  test_io_sjson.py  test_io_stockholm.py  test_io_tab_blast.py  test_io_tab_mmseqs.py  test_io_tab_xsv.py  test_io_template_plugin.py  test_scripts.py  test_web.py  util.py
sugar/tests/data/: example.fasta  example.gb  example2.stk  example_stockholm_more_metadata_linebreak.stk  example_stockholm_multi.stk  fts_example.blastn  fts_example.blastn.all  fts_example.csv  fts_example.tsv  fts_example_blast_mmseqs2_fmtmode0.txt  fts_example_blast_outfmt6.blastn  fts_example_blast_outfmt7_all.blastn  fts_example_outfmt6.blastn  fts_example_tab_infernal_cmscan_fmt1.txt  fts_example_tab_infernal_cmscan_fmt2_mrum.txt  io_binary_plugin_atg.bintest  io_binary_plugin_fake_fts.bintest  io_blast_outfmt10.blastn  io_blast_outfmt6_all.blastn  io_template_plugin.fancy
sugar/web/: __init__.py  _entrez.py
