[project]
name = "rnajena-sugar"
dynamic = ["readme", "version"]
authors = [
    {name = "Tom Eulenfeld"},
]
description = "Simple containers for RNA and DNA sequence analysis"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "bioinformatics", "RNA", "DNA", "sequence",
    "fasta", "genbank", "stockholm", "blast", "entrez",
    "index"
]
dependencies = [
  "binarysearchfile",
  "matplotlib",
  "pandas",
  "platformdirs",
  "pytest",
  "requests",
  "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/rnajena/sugar"
"Bug Tracker" = "https://github.com/rnajena/sugar/issues"

[project.scripts]
sugar = "sugar.scripts:cli"

[project.entry-points."sugar.io"]
fasta = "sugar._io.fasta"
sjson = "sugar._io.sjson"
genbank = "sugar._io.genbank"
stockholm = "sugar._io.stockholm"
gff = "sugar._io.gff"

[project.entry-points."sugar.io.fts"]
gff = "sugar._io.gff"
genbank = "sugar._io.genbank"
blast = "sugar._io.blast"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "sugar.__version__"}

[tool.setuptools.packages.find]
include = ["sugar*"]

[tool.setuptools.package-data]
"sugar.data.data_gcode" = ["*.*"]
"sugar.data.data_submat" = ["*"]
"sugar.tests" = ["pytest.ini"]
"sugar.tests.data" = ["*.*"]

[tool.setuptools.exclude-package-data]
"sugar.data.data_submat" = ["README*"]
